Fixed div's height stuck when resizing.

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body, html {
     padding: 0;
 }
 
-  #wrapper {
+  .wrapper {
       width: 100%;
       height: 100%;
       position: absolute;
